--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "flourish-embed-template",
-  "homepage": "https://vs-postmedia.github.io/flourish-embed-template/",
+  "homepage": "https://vs-postmedia.github.io/1114-foi-updates/",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
